--- a/bentoml/yatai/web/package.json
+++ b/bentoml/yatai/web/package.json
@@ -28,6 +28,8 @@
     "morgan": "^1.10.0",
     "normalize.css": "^8.0.1",
     "protobufjs": "^6.8.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "winston": "^3.2.1"
