--- a/bentoml/yatai/web/package.json
+++ b/bentoml/yatai/web/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^16.13.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
