--- a/bentoml/yatai/web/client/package.json
+++ b/bentoml/yatai/web/client/package.json
@@ -25,7 +25,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "react-cookie": "^4.0.3"    
   },
   "scripts": {
     "start": "react-scripts start",
