--- a/bentoml/yatai/web/client/package.json
+++ b/bentoml/yatai/web/client/package.json
@@ -2,6 +2,7 @@
   "name": "yatai-web-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@blueprintjs/core": "^3.33.0",
     "@blueprintjs/datetime": "^3.19.2",
@@ -21,12 +22,12 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2",
-    "react-cookie": "^4.0.3"    
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
