--- a/bentoml/yatai/web/package.json
+++ b/bentoml/yatai/web/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^2.12.0",
     "awesome-typescript-loader": "^5.2.1",
     "concurrently": "^5.1.0",
+    "cookie-parser": "^1.4.4",
     "css-loader": "^4.3.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
@@ -67,8 +68,7 @@
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
     "webpack": "4.42.0",
-    "webpack-cli": "^3.3.11",
-    "cookie-parser": "^1.4.4"
+    "webpack-cli": "^3.3.11"
   },
   "jest": {
     "moduleFileExtensions": [
